# Group-Project

./: .editorconfig  .gitlab-ci.yml  ARCHITECTURE.md  DEVELOPMENT.md  README.md  docker-compose.yml
.githooks/: commit-msg
backend/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  debug_server.py  docker-entrypoint.sh  pyproject.toml
backend/app/: config.py  document.py  main.py  parser.py
backend/app/api/: models.py  requirements.txt  routes.py
backend/app/grobid/: client.py  file.py  form.py  tei.py
backend/app/grobid/models/: __init__.py  affiliation.py  article.py  author.py  citation.py  date.py  file.py  form.py  person_name.py  ref.py  ref_text.py  response.py  scope.py  section.py
backend/app/nlp/: main.py  summary.py  techniques.py
backend/docs/: conf.py  index.rst
backend/tests/: test_document.py  test_parser.py
backend/tests/test_api/: test_routes.py
backend/tests/test_grobid/: test_client.py  test_file.py  test_form.py  test_tei.py
backend/tests/test_grobid/test_models/: test_citation.py  test_file.py  test_form.py
backend/tests/test_nlp/: test_summary.py  test_techniques.py
frontend/: .env.production  .eslintrc.json  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.ts
frontend/css/: style.css
frontend/e2e/: display.spec.js  upload.spec.js
frontend/js/: index.js
frontend/src/: constants.ts  index.js  index.ts  routes.ts
frontend/src/models/: api.ts
frontend/src/modules/: API.ts  DragDropHandlers.ts  MLA8Citation.js  MLA8Citation.ts  PDF.ts  PDFRenderer.js  URL.ts  alert.ts  api.ts  author.ts  drag_drop.ts  imrad.ts  keywords.ts  mla8_citation.ts  pdf.ts  references.ts  svg.ts  theme.ts  wordcloud.js  wordcloud.ts
frontend/src/styles/: index.scss  reset.scss  tailwind.scss
frontend/src/styles/modules/: accordian-breakdown.scss  drop-zone.scss  feature-components.scss  headers.scss  loading-screen.scss  main.scss  pdf-renderer.scss  summary-output.scss  tailwind.scss
frontend/src/views/: AbstractView.ts  Display.js  Display.ts  NotFound.ts  Upload.js  Upload.ts
