[tool.poetry]
name = "app"
version = "0.0.0"
description = "Backend logic for Content Visualisation project"
authors = [
  "William Simson van Dijkhuizen <psyws2@nottingham.ac.uk>",
  "Oluwagbemiga Ayanola <psyoa5@nottingham.ac.uk>",
  "Omar Zeghoauni <psyoz1@nottingham.ac.uk>",
  "Robert Sykes <psyrs13@nottingham.ac.uk>",
  "Sean Butcher <psysb11@nottingham.ac.uk>",
  "Emre Ozsaruhan <psyeo1@nottingham.ac.uk>"
]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.19.2"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
uvicorn = "^0.15.0"
requests = "^2.26.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.11b0"
pytest = "^6.2.5"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
coverage = "^6.1.2"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.1"
flake8-blind-except = "^0.2.0"
flake8-builtins = "^1.5.3"
flake8-black = "^0.2.3"
flake8-annotations-coverage = "^0.0.5"
# TODO: decide if these are required to test endpoints
httpx = "^0.21.1"
asgi-lifespan = "^1.0.1"

[tool.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
